# binsparse-reference-c

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  compile_flags.txt  dev.sh  notes.txt  requirements.txt  verbose_test_output.txt
.github/workflows/: ci.yml
bindings/matlab/: Contents.m  README.md  binsparse_build_matlab_bindings.m  binsparse_build_octave_bindings.m  binsparse_create_struct.m  binsparse_from_ssmc.c  binsparse_from_ssmc.m  binsparse_info.m  binsparse_minimize_types.c  binsparse_read.c  binsparse_read.m  binsparse_to_ssmc_problem.m  binsparse_write.c  binsparse_write.m  binsparse_write_ssmc_problem.m  binsparse_write_string_dataset.c  bsp_hello.c  bsp_matrix_create.m  bsp_matrix_info.m  build_matlab_bindings.m  build_octave_bindings.m  compile_binsparse_read.m  compile_binsparse_read_octave.m  compile_binsparse_write.m  compile_binsparse_write_octave.m  compile_bsp_hello.m  compile_octave.sh  compile_write_binsparse_from_matlab.m  compile_write_binsparse_from_matlab_octave.m  convert_to_problem_struct.m  generate_bsp_from_ssmc.m  matlab_bsp_helpers.h  test_binsparse_from_ssmc.m  test_binsparse_minimize_roundtrip.m  test_binsparse_read.m  test_binsparse_roundtrip_dir.m  test_binsparse_struct.m  test_binsparse_to_ssmc_problem.m  test_binsparse_write.m  test_binsparse_write_ssmc_problem.m  (+7 more)
cmake/: binsparse-config.cmake.in
examples/: CMakeLists.txt  benchmark_read.c  benchmark_read_parallel.c  benchmark_write.c  bsp-ls.c  bsp2mtx  bsp2mtx.c  check_equivalence.c  check_equivalence_parallel.c  convert_binsparse.c  matrix_market_simple.c  mtx2bsp.c  simple_matrix_read.c  simple_matrix_write.c  simple_read.c  simple_write.c  tensor_test.c
examples/cpp/: CMakeLists.txt  benchmark_read.cpp  benchmark_write.cpp  bsp-ls.cpp  bsp2mtx.cpp  check_equivalence.cpp  mtx2bsp.cpp  simple.cpp  simple_matrix_read.cpp  simple_matrix_write.cpp  simple_read.cpp  simple_write.cpp  tensor_test.cpp
include/: CMakeLists.txt  types.h
include/binsparse/: array.h  binsparse.h  binsparse_all.h  binsparse_cJSON.h  binsparse_hdf5.h  convert_matrix.h  error.h  generate.h  hdf5_wrapper.h  matrix.h  matrix_formats.h  minimize_values.h  read_matrix.h  read_matrix_generic.h  read_tensor.h  structure.h  tensor.h  types.h  write_matrix.h  write_tensor.h
include/binsparse/detail/: allocator.h  declamp_values.h  detail.h  hdf5_types.h  parse_dataset.h  shm_tools.h
include/binsparse/detail/cpp/: array.hpp
include/binsparse/matrix_market/: coo_sort_tools.h  matrix_market_inspector.h  matrix_market_read.h  matrix_market_type_t.h  matrix_market_write.h
scripts/: read_cold_benchmarks.sh  read_warm_benchmarks.sh  test.sh  test_fastmm.sh  test_fastmm_warm.sh  test_warm.sh  test_write.sh  write_cold_benchmarks.sh  write_fastmm.sh
src/: CMakeLists.txt  read_matrix.c  read_tensor.c  write_matrix.c  write_tensor.c
test/: CMakeLists.txt
test/bash/: CMakeLists.txt  ssmc_tools.sh  test-cpp.sh  test.sh
test/c/: CMakeLists.txt  dvec_shape_test.c
test/julia/: CMakeLists.txt  tensor_test.jl
