function(add_example example_name)
  add_executable(${example_name} ${example_name}.c)
  target_link_libraries(${example_name} binsparse-rc)
endfunction()

add_example(simple_matrix_write)
add_example(simple_matrix_read)
add_example(simple_read)
add_example(simple_write)
add_example(mtx2bsp)
add_example(bsp2mtx)
add_example(check_equivalence)
